--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <title>Login</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-    <link href="/css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
     <div class="login">
-        <h1>Login</h1>
+
+        <div class="row">
+            <div class="logoImage">
+                <img src="images/logo.png" alt="Bytetools" style="width:100px">&nbsp;&nbsp;
+            </div>
+            <div class="logo-text">
+                Bytetools
+            </div>
+        </div>
         <form action="authenticate.php" method="post">
             <label for="username">
                 <i class="fas fa-user"></i>
@@ -22,4 +32,5 @@
         </form>
     </div>
 </body>
+
 </html>
