adding Gurnoors changes from branch To-add-more...

--- a/public/login.html
+++ b/public/login.html
@@ -12,6 +12,14 @@
 <body>
     <div class="login">
         <h1>Login</h1>
+        <div class="row">
+            <div class="logoImage">
+                <img src="images/logo.png" alt="Bytetools" style="width:100px">&nbsp;&nbsp;
+            </div>
+            <div class="logo-text">
+                Bytetools
+            </div>
+        </div>
         <form action="/auth" method="post">
             <label for="username">
                 <!-- font awesome icon -->
