fixing index bug

--- a/public/login.html
+++ b/public/login.html
@@ -10,7 +10,7 @@
     <!-- include the stylesheet file -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
-
+<script src="js/main.js"></script>
 <body>
     <div class="login">
         <div class="row">
