--- a/public/loggedin.html
+++ b/public/loggedin.html
@@ -158,6 +158,14 @@
                                     Payments
                                 </a>
                             </li>
+                            <li>
+                                <a href="#" class="nav-link text-white">
+                                    <form action="/logout" method="post">
+                                        <input type="submit" value="LOGOUT">
+                                    </form>
+                                </a>
+                            </li>
+
                         </ul>
                         <hr>
                         <div class="dropdown">
