--- a/public/loggedin.html
+++ b/public/loggedin.html
@@ -158,35 +158,13 @@
                                     Payments
                                 </a>
                             </li>
-                            <li>
-                                <a href="#" class="nav-link text-white">
-                                    <form action="/logout" method="post">
-                                        <input type="submit" value="LOGOUT">
-                                    </form>
-                                </a>
-                            </li>
 
                         </ul>
                         <hr>
-                        <div class="dropdown">
-                            <a href="#"
-                                class="d-flex align-items-center text-white text-decoration-none dropdown-toggle "
-                                id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                                <img src="https://github.com/mdo.png" alt="" width="32" height="32"
-                                    class="rounded-circle me-2">
-                                <strong>mdo</strong>
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-dark text-small shadow"
-                                aria-labelledby="dropdownUser1">
-                                <li><a class="dropdown-item" href="#">New project...</a></li>
-                                <li><a class="dropdown-item" href="#">Settings</a></li>
-                                <li><a class="dropdown-item" href="#">Profile</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Sign out</a></li>
-                            </ul>
-                        </div>
+                        <form action="/logout" method="post">
+                            <button id="logout" class="btn btn-secondary" name="foo" value="Sign Out">Signout</button>
+                            <!-- <input type="submit" value="LOGOUT"> -->
+                        </form>
                     </div>
 
 
@@ -214,7 +192,9 @@
 
                 <div class="input-group">
                     <!-- Button for new Clients -->
-                    <button id="new-button" type="button" class="btn btn-secondary">New</button>
+                    <form action="/newClient.hmtl">
+                        <input id="new-button" class="btn btn-secondary" type="submit" value="New" />
+                    </form>
 
 
                     <!-- Search Button -->
