--- a/public/loggedin.html
+++ b/public/loggedin.html
@@ -15,7 +15,7 @@
     <link href="css/sidebars.css" rel="stylesheet">
     <link rel="stylesheet" href="css/home.css">
 
-    <script src="/index.js"></script>
+    <script src="../index.js"></script>
 
 </head>
 
