--- a/public/create-invoice.html
+++ b/public/create-invoice.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,8 @@
     <title>create-invoice</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-    integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
-    crossorigin="anonymous" />
+        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+        crossorigin="anonymous" />
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/sidebars.css" rel="stylesheet">
@@ -16,6 +17,7 @@
     <link rel="stylesheet" href="css/create-invoice.css">
 
 </head>
+
 <body>
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
         <symbol id="bootstrap" viewBox="0 0 118 94">
@@ -108,14 +110,7 @@
                         </a>
                         <hr>
                         <ul class="nav nav-pills flex-column mb-auto">
-                            <li class="nav-item">
-                                <a href="#" class="nav-link text-white" aria-current="page">
-                                    <svg class="bi me-2" width="16" height="16">
-                                        <use xlink:href="#home" />
-                                    </svg>
-                                    Home
-                                </a>
-                            </li>
+
                             <li>
                                 <a href="#" class="nav-link text-white">
                                     <svg class="bi me-2" width="16" height="16">
@@ -124,12 +119,20 @@
                                     Dashboard
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link text-white" aria-current="page">
+                                    <svg class="bi me-2" width="16" height="16">
+                                        <use xlink:href="#people-circle" />
+                                    </svg>
+                                    Clients
+                                </a>
+                            </li>
                             <li>
                                 <a href="#" class="nav-link text-white">
                                     <svg class="bi me-2" width="16" height="16">
                                         <use xlink:href="#table" />
                                     </svg>
-                                    Orders
+                                    Invoices
                                 </a>
                             </li>
                             <li>
@@ -143,42 +146,28 @@
                             <li>
                                 <a href="#" class="nav-link text-white">
                                     <svg class="bi me-2" width="16" height="16">
-                                        <use xlink:href="#people-circle" />
+                                        <use xlink:href="#collection" />
                                     </svg>
-                                    Customers
+                                    Payments
                                 </a>
                             </li>
+
                         </ul>
                         <hr>
-                        <div class="dropdown">
-                            <a href="#"
-                                class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
-                                id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                                <img src="https://github.com/mdo.png" alt="" width="32" height="32"
-                                    class="rounded-circle me-2">
-                                <strong>mdo</strong>
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-dark text-small shadow"
-                                aria-labelledby="dropdownUser1">
-                                <li><a class="dropdown-item" href="#">New project...</a></li>
-                                <li><a class="dropdown-item" href="#">Settings</a></li>
-                                <li><a class="dropdown-item" href="#">Profile</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Sign out</a></li>
-                            </ul>
-                        </div>
+                        <form action="/logout" method="post">
+                            <button id="logout" class="btn btn-secondary" name="foo" value="Sign Out">Signout</button>
+                            <!-- <input type="submit" value="LOGOUT"> -->
+                        </form>
                     </div>
                 </div>
             </div>
-        </div>    
+        </div>
     </div>
 
     <h1>Invoice/Create</h1>
 
-    <fieldset id = "invoiceinfo">
-    
+    <fieldset id="invoiceinfo">
+
         <table>
             <tr>
                 <td>Invoice Number:</td>
@@ -196,11 +185,11 @@
             </tr>
         </table>
 
-        <p>Address: <input id = "addressfield"></input> </p>
+        <p>Address: <input id="addressfield"></input> </p>
 
     </fieldset>
 
-    <fieldset id = "clientinfo">
+    <fieldset id="clientinfo">
         <table>
             <tr>
                 <td>Select Client</td>
@@ -232,21 +221,21 @@
         </table>
     </fieldset>
 
-    <fieldset id = "productdesc">
+    <fieldset id="productdesc">
         <table>
             <tr>
                 <th>Products</th>
                 <th>Description</th>
-                <th class = "discount">Discount</th>
-                <th class = "price">Price($)</th>
+                <th class="discount">Discount</th>
+                <th class="price">Price($)</th>
                 <th>Quantity</th>
                 <th>Total</th>
             </tr>
             <tr>
                 <td><input type="textbox"></td>
                 <td><input type="textbox"></td>
-                <td class = "discount"><input type="textbox"></td>
-                <td class = "price"><input type="textbox"></td>
+                <td class="discount"><input type="textbox"></td>
+                <td class="price"><input type="textbox"></td>
                 <td><input type="textbox"></td>
                 <td><input type="textbox"></td>
             </tr>
@@ -254,29 +243,29 @@
             <tr>
                 <td><input type="textbox"></td>
                 <td><input type="textbox"></td>
-                <td class = "discount"><input type="textbox"></td>
-                <td class = "price"><input type="textbox"></td>
+                <td class="discount"><input type="textbox"></td>
+                <td class="price"><input type="textbox"></td>
                 <td><input type="textbox"></td>
                 <td><input type="textbox"></td>
             </tr>
 
         </table>
     </fieldset>
-    
-    <form id = "money">
+
+    <form id="money">
         <p>Subtotal</p>
-        <input type = "textbox">
+        <input type="textbox">
         <p>Total Discount</p>
-        <input type = "textbox">
+        <input type="textbox">
         <p>Tax:</p>
-        <input type = "textbox">
+        <input type="textbox">
         <p>Paid to Date</p>
-        <input type = "textbox">
+        <input type="textbox">
         <p>Amount:</p>
-        <input type = "textbox">
+        <input type="textbox">
     </form>
 
-    <form id = "additionalbtn">
+    <form id="additionalbtn">
         <p>
             <button>Save</button>
             <button>Submit & Email</button>
@@ -285,4 +274,5 @@
         </p>
     </form>
 </body>
+
 </html>
