--- a/public/newClient.html
+++ b/public/newClient.html
@@ -8,8 +8,8 @@
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-          integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
-          crossorigin="anonymous" />
+        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+        crossorigin="anonymous" />
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/sidebars.css" rel="stylesheet">
@@ -234,6 +234,17 @@
 
 
                             </div>
+
+                            <div class="row g-3 gx-5">
+                                <div class="col-md-12">
+                                    <h2>Billing Address</h2>
+                                    <textarea class="form-control" id="billingAdress" classname="Text1" cols="40"
+                                        rows="5"></textarea>
+                                    <br>
+                                </div>
+
+                            </div>
+
                             <div class="col-12" style="text-align: center;">
                                 <button id="addClient" type="submit" class="btn btn-secondary">Add Client</button>
                             </div>
