--- a/public/login333.html
+++ b/public/login333.html
@@ -11,6 +11,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <script src="js/main.js"></script>
+
 <body>
     <div class="login">
         <div class="row">
@@ -31,6 +32,9 @@
                 <i class="fas fa-lock"></i>
             </label>
             <input type="password" name="password" placeholder="Password" id="password" required>
+            <input type="submit" value="Login">
+        </form>
+        <form>
             <input type="submit" value="Login">
         </form>
     </div>
