checking view template button

--- a/public/viewinvoice.html
+++ b/public/viewinvoice.html
@@ -169,6 +169,8 @@
         <button>Mark Cancelled</button>
         <button>Edit Layout</button>
     </form>
+
+    <iframe src="dummy.pdf"></iframe>
 </body>
 
 </html>
