Deleted Search, Dashboard, statements column

--- a/public/newProduct.html
+++ b/public/newProduct.html
@@ -118,16 +118,7 @@
 
                         <hr>
                         <ul class="nav nav-pills flex-column mb-auto">
-                            <li>
-                                <form method="GET">
-                                    <a href="/dashboard" class="nav-link text-white">
-                                        <svg class="bi me-2" width="16" height="16">
-                                            <use xlink:href="#speedometer2" />
-                                        </svg>
-                                        Dashboard
-                                    </a>
-                                </form>
-                            </li>
+
 
                             <li class="nav-item">
                                 <form method="GET">
@@ -192,7 +183,7 @@
 
                 <div class="formcontainer">
                     <form action="/newClient/Added" method="post">
-                    <!-- <form action="/newClient/Added" target="_blank" method="post"> -->
+                        <!-- <form action="/newClient/Added" target="_blank" method="post"> -->
                         <div class="row g-3 gx-5">
                             <div class="col-md-6">
                                 <h2>Client Information</h2>
@@ -223,8 +214,8 @@
                                 <div class="col-md-12">
                                     <!-- <h2>Billing Address</h2> -->
                                     <label for="billingAddress" class="form-label">Description:</label>
-                                    <input type="textarea" class="form-control" id="billingAddress" name="prdctDesc" classname="Text1" 
-                                    cols="40" rows="5">
+                                    <input type="textarea" class="form-control" id="billingAddress" name="prdctDesc"
+                                        classname="Text1" cols="40" rows="5">
                                     <!-- </textarea> -->
                                     <br>
                                 </div>
@@ -233,10 +224,10 @@
                             <!-- <form method="POST" action="/newClient/Added"> -->
                             <div class="col-12" style="text-align: center;">
                                 <!-- <form method="POST" action="/newClient/Added"> -->
-                                    <form method="POST" action="/newProduct/Added">
-                                        <input id="addClient" type="submit" class="btn btn-secondary" value="Add Product">
-                                    </form>
-                                    
+                                <form method="POST" action="/newProduct/Added">
+                                    <input id="addClient" type="submit" class="btn btn-secondary" value="Add Product">
+                                </form>
+
                                 <!-- </form> -->
                             </div>
                             <!-- </form> -->
